syntax = "proto3";
package alfarid.control;

service TeacherHub {
  rpc RegisterStudent (RegisterStudentRequest) returns (RegisterStudentResponse);
  rpc Heartbeat (HeartbeatRequest) returns (HeartbeatResponse);
  rpc RaiseHand (RaiseHandRequest) returns (RaiseHandResponse);

  rpc SendCommand (CommandRequest) returns (CommandResponse);
  rpc SubscribeEvents (SubscribeRequest) returns (stream EventMessage);
}

message RegisterStudentRequest {
  string studentId = 1;
  string displayName = 2;
  string machineName = 3;
  string ip = 4;
}

message RegisterStudentResponse {
  bool ok = 1;
  string sessionId = 2;
}

message HeartbeatRequest {
  string studentId = 1;
  string sessionId = 2;
}

message HeartbeatResponse {
  bool ok = 1;
  int64 serverTimeUtc = 2;
}

message RaiseHandRequest {
  string studentId = 1;
  string sessionId = 2;
  string note = 3;
}

message RaiseHandResponse { bool ok = 1; }

enum CommandType {
  COMMAND_TYPE_UNSPECIFIED = 0;
  LOCK_SCREEN = 1;
  UNLOCK_SCREEN = 2;
  SHOW_MESSAGE = 3;
  OPEN_URL = 4;
}

message CommandRequest {
  CommandType type = 1;
  repeated string targetStudentIds = 2;
  map<string, string> payload = 3;
}

message CommandResponse {
  bool ok = 1;
  string error = 2;
}

message SubscribeRequest { string teacherSessionId = 1; }

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  STUDENT_REGISTERED = 1;
  STUDENT_OFFLINE = 2;
  HAND_RAISED = 3;
}

message EventMessage {
  EventType type = 1;
  string studentId = 2;
  string json = 3;
  int64 utc = 4;
}
